--- a/Solana_Lab_1_generate_&_import_keypair/package.json
+++ b/Solana_Lab_1_generate_&_import_keypair/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@solana-developers/helpers": "^2.5.6",
+    "@solana/spl-name-service": "^0.2.1",
     "@solana/web3.js": "^1.95.3",
     "dotenv": "^16.4.5"
   }
